--- a/index.html
+++ b/index.html
@@ -1,77 +1,67 @@
 <!doctype html>
 <html lang="en">
 
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport"
-              content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-        <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <title>AI Person Website</title>
-    </head>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Eduards website</title>
+    <link rel="stylesheet" href="css\styles.css">
+    <link rel="icon" href="favicon.ico">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather&family=Montserrat&family=Sacramento&display=swap" rel="stylesheet">
+</head>
 
-    <body>
-        <table cellspacing="20">
-            <tr>
-                <td> <img src="image/AI-person.jpg" alt="Profile picture" width="200"></td>
-                <td> <h1>AI person</h1>
-        <p><em>Founder and CEO of <strong><a href="https://goose.ai/">Company.</a></strong></em></p>
-        <p>This is text for a brief BIO. This information is for information purposes</p></td>
-            </tr>
-        </table>
+<body>
+    <div class="top-container">
+        <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
+        <h1>I'm Eduards.</h1>
+        <h2>a <span class="pro">pro</span>grammer.</h2>
+        <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
+        <img src="images/mountain.png" alt="mountain-img">
+    </div>
+<div class="middle-container">
+  <div class="profile">
+    <img class="topper-img" src="\Images\LAU04432.png" alt="profile-image">
+    <h2>Hello.</h2>
+    <p class="intro">This a CV page, that is still in development.</p>
+  </div>
+  <hr>
+  <div class="skills">
+    <h2>My Skills.</h2>
+
+    <div class="skill-row">
+      <img class="chillies-img" src="\Images\chillies.png" alt="computer-image">
+
+      <h3>Design and development</h3>
+      <p>The goal and the aim is to learn programming and in the future to work with AI and machine learning systems.</p>
+    </div>
+    <div class="skill-row">
+      <img class="computer-img" src="\Images\computer.png" alt="computer-image">
+
+      <h3>The beginning</h3>
+      <p>For now I want to the test the waters and understand what is programming and what languages work best.</p>
+
+    </div>
+    </div>
+    <hr>
+    <div class="contact-me">
+    <h2>Get In Touch</h2>
+    <h3>If you are interested in more.</h3>
+    <p class="contact-me-text">Got a taste for the fancy looking website and want to chat some more, feel free to contact me.</p>
+    <a class="btn" href="mailto:e.salcevics@outlook.com">CONTACT ME</a>
+  </div>
+</div>
 
 
-        <hr>
-        <h3>Books and Teaching</h3>
-        <ul>
-            <li>The complete course for element</li>
-            <li>The complete course for element2</li>
-        </ul>
-        <hr>
-        <table cellspacing="10">
-            <thead>
-                <tr>
-                    <th>Dates</th>
-                    <th>Work</th>
-                </tr>
-            </thead>
-
-            <tbody>
-                <tr>
-                <td>2010-2013</td>
-                <td>Lead Developer at Google</td>
-                </tr>
-                <tr>
-                    <td>2010</td>
-                    <td>Researcher at The institution of Cognitive Neuroscience</td>
-                </tr>
-            </tbody>
-
-            <tfoot>
-
-            </tfoot>
-
-        </table>
-        <hr>
-        <h3>Skills</h3>
-        <table cellspacing="10">
-            <tbody>
-                <tr>
-                    <td>iOS Development</td>
-                    <td>⭐⭐⭐⭐</td>
-                    <td>Photography</td>
-                    <td>⭐⭐⭐⭐</td>
-                </tr>
-                <tr>
-                    <td>Web Development</td>
-                    <td>⭐⭐</td>
-                    <td>Painting</td>
-                    <td>⭐</td>
-                </tr>
-            </tbody>
-        </table>
-        <hr>
-        <a href="hobbies.html"> My Hobbies, </a>
-        <a href="contact-info.html">Contact me</a>
-    </body>
+    <div class="bottom-container">
+      <a class="footer-link" href="https://www.linkedin.com/in/eduards-salcevics-815922b2">LinkedIn</a>
+      <a class="footer-link" href="https://www.facebook.com/eduards.salcevics/">Facebook</a>
+      <a class="footer-link" href="https://dudix2.github.io/cv/">Website</a>
+      <p class="copyright">© 2022 Eduards.</p>
+    </div>
+</body>
 
 </html>
