--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </div>
 <div class="middle-container">
   <div class="profile">
-    <img class="topper-img" src="\Images\LAU04432.png" alt="profile-image">
+    <img class="topper-img" src="\images\LAU04432.png" alt="profile-image">
     <h2>Hello.</h2>
     <p class="intro">This a CV page, that is still in development.</p>
   </div>
@@ -33,13 +33,13 @@
     <h2>My Skills.</h2>
 
     <div class="skill-row">
-      <img class="chillies-img" src="\Images\chillies.png" alt="computer-image">
+      <img class="chillies-img" src="\images\chillies.png" alt="computer-image">
 
       <h3>Design and development</h3>
       <p>The goal and the aim is to learn programming and in the future to work with AI and machine learning systems.</p>
     </div>
     <div class="skill-row">
-      <img class="computer-img" src="\Images\computer.png" alt="computer-image">
+      <img class="computer-img" src="\images\computer.png" alt="computer-image">
 
       <h3>The beginning</h3>
       <p>For now I want to the test the waters and understand what is programming and what languages work best.</p>
